refactor(service): replace Collectors.toList() with toList() and remove redundant null guard
RecommendationService used the verbose Collectors.toList() in 7 stream
pipelines where the unmodifiable Stream.toList() (Java 16+) suffices and
better signals immutability intent. BookCoverResolutionService had a
redundant null check on an Optional parameter that Spring already guarantees
non-null via constructor injection.

- Replace 7 Collectors.toList() calls with Stream.toList() in RecommendationService
- Remove redundant null ternary on bookDataOrchestrator Optional in BookCoverResolutionService